[package]
name = "rs-boids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["trace_tracy"] }
bevy_egui = "0.27.0"
rand = "0.9.0-alpha.1"
bevy-inspector-egui = "0.24.0"
