[package]
name = "rs-boids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.3" }
bevy_egui = "0.33.0"
rand = {version = "0.9.0"}
getrandom = {version = "0.3", features = ["wasm_js"]}
bevy-inspector-egui = "0.30.0"

[dev-dependencies]
wasm-bindgen = "0.2.92"
